--- a/cmos-vlsi/references.bib
+++ b/cmos-vlsi/references.bib
@@ -1,19 +1,6 @@
-@article{knuth84,
-  author = {Knuth, Donald E.},
-  title = {Literate Programming},
-  year = {1984},
-  issue_date = {May 1984},
-  publisher = {Oxford University Press, Inc.},
-  address = {USA},
-  volume = {27},
-  number = {2},
-  issn = {0010-4620},
-  url = {https://doi.org/10.1093/comjnl/27.2.97},
-  doi = {10.1093/comjnl/27.2.97},
-  journal = {Comput. J.},
-  month = may,
-  pages = {97–111},
-  numpages = {15}
+@book{cmosvlsi-4th,
+  title={CMOS VLSI design: a circuits and systems perspective},
+  author={Weste, Neil HE and Harris, David},
+  year={2015},
+  publisher={Pearson Education India}
 }
-
-
